--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./css/media.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/icon.png">
     <title>Document</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
         <div class="rel">
             <h1>welcome</h1>
             <nav>
-                <ul class="nav_l">
+                <ul class="nav_list">
                     <li><a href="#">info</a></li>
                     <li><a href="#">notification</a></li>
                     <li><a href="#">about us</a></li>
@@ -104,8 +105,7 @@
                 </a>
               </li>
             </ul>
-            <a href="#" class="card_arr left">L</a>
-            <a href="#" class="card_arr right">R</a>
+           
           </div>
         </div>
       </section>
